# agi4

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  LICENSE-SPEC  NOTICE  Plans.md  README.md  SPEC.md  TODO.md  harness.toml
.claude/: hooks.json  settings.json
.claude/memory/: session-log.md
.claude/sessions/: .last_inbox_check
.claude/state/: changed-files.jsonl  instructions-loaded.jsonl  memory-resume-error.md  session-events.jsonl  session-skills-used.json  session.json  usage-stats.jsonl
.claude/state/sessions/: session-1779788075568138709.events.jsonl  session-1779788075568138709.json  session-1779788411100714448.events.jsonl  session-1779788411100714448.json
.github/workflows/: ci.yml
.harness-mem/state/: continuity.json
attestations/v0.1.0/: claude-3.5-sonnet-2026-05-28.json  claude-3.5-sonnet-2026-05-28.md
hooks/: pre-commit
runner/: Cargo.toml  deny.toml
runner/crates/agi4/: CHANGELOG.md  Cargo.toml  README.md
runner/crates/agi4-adapters/: CHANGELOG.md  Cargo.toml  README.md
runner/crates/agi4-adapters/src/: apex_agents.rs  arc_prize.rs  gdpval.rs  gpqa_diamond.rs  hle.rs  lib.rs  metr.rs  osworld.rs  re_bench.rs  rli.rs  swe_bench.rs
runner/crates/agi4-core/: CHANGELOG.md  Cargo.toml  README.md
runner/crates/agi4-core/src/: conjunct.rs  consistency.rs  evaluators.rs  evidence.rs  lib.rs  sources.rs  threshold.rs  verdict.rs
runner/crates/agi4-report/: CHANGELOG.md  Cargo.toml  README.md
runner/crates/agi4-report/src/: lib.rs
runner/crates/agi4-schema/: CHANGELOG.md  Cargo.toml  README.md
runner/crates/agi4-schema/src/: lib.rs
runner/crates/agi4/src/: fixtures.rs  lib.rs  live.rs  main.rs
runner/tests/: arc_prize_fixture_roundtrip.rs  hle_fixture_roundtrip.rs  metr_fixture_roundtrip.rs
runner/tests/fixtures/apex-agents/: task-completion-0.78.json
runner/tests/fixtures/arc-prize/: leaderboard-example.json
runner/tests/fixtures/gdpval/: win-tie-rate-0.87.json
runner/tests/fixtures/gpqa-diamond/: accuracy-0.91.json
runner/tests/fixtures/hle/: overall-accuracy-0.82.json
runner/tests/fixtures/metr/: time-horizon-168h.json
runner/tests/fixtures/osworld/: task-completion-0.88.json
runner/tests/fixtures/re-bench/: task-success-0.68.json
runner/tests/fixtures/rli/: completion-rate-0.72.json
runner/tests/fixtures/swe-bench/: pass-at-5-0.91.json
schema/: agi4-output-v0.1.0.json
scripts/: install-hooks.sh
