[package]
name = "agi4-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Upstream source adapters for AGI/4 evidence ingestion"

[dependencies]
agi4-core = { path = "../agi4-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
