[package]
name = "agi4-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Upstream source adapters for AGI/4 evidence ingestion"

[dependencies]
agi4-core = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.40", features = ["rt", "time"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
futures = "0.3"

[dev-dependencies]
