[package]
name = "agi4-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON schema and serialization types for AGI/4 verdicts"

[dependencies]
agi4-core = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono", "url"] }

[dev-dependencies]
