[package]
name = "agi4"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AGI/4 specification and reference runner"

[lib]
name = "agi4"

[[bin]]
name = "agi4"
path = "src/main.rs"

[dependencies]
agi4-core = { path = "../agi4-core" }
agi4-schema = { path = "../agi4-schema" }
agi4-adapters = { path = "../agi4-adapters" }
agi4-report = { path = "../agi4-report" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
