[package]
name = "agi4"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AGI/4 specification and reference runner"

[lib]
name = "agi4"

[[bin]]
name = "agi4"
path = "src/main.rs"

[dependencies]
agi4-core = "0.1.0"
agi4-schema = "0.1.0"
agi4-adapters = "0.1.0"
agi4-report = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.40", features = ["rt", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

[dev-dependencies]
